--- a/bohcura/public/index.html
+++ b/bohcura/public/index.html
@@ -24,8 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Fahkwang:400,600&display=swap" rel="stylesheet">
+<!--    <link href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap" rel="stylesheet">-->
+<!--    <link href="https://fonts.googleapis.com/css?family=Fahkwang:400,600&display=swap" rel="stylesheet">-->
+
+    <!--    combined google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Fahkwang|Lato:400,700|Libre+Franklin|Special+Elite&display=swap" rel="stylesheet">
+
     <title>React App</title>
   </head>
   <body>
