Styled RecipeAdd and RecipeListGrid

--- a/bohcura/public/index.html
+++ b/bohcura/public/index.html
@@ -29,7 +29,7 @@
 
     <!--    combined google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Fahkwang|Lato:400,700|Libre+Franklin|Special+Elite&display=swap" rel="stylesheet">
-
+    <link href="https://cdn.jsdelivr.net/npm/semantic-ui/dist/semantic.min.css" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
