--- a/bohcura/public/index.html
+++ b/bohcura/public/index.html
@@ -30,7 +30,7 @@
     <!--    combined google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Fahkwang|Lato:400,700|Libre+Franklin|Special+Elite&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/semantic-ui/dist/semantic.min.css" rel="stylesheet">
-    <title>React App</title>
+    <title>Bohcura App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
